# carbon-adf

./: .gitignore  Backend.hs  Config.hs  Main.hs  README.md  TestAll.hs  carbon.cabal  diamond.sh  entwurf.html  fitInstance.txt  generateDiamond.txt  linesOfCode.sh  linesOfHs.sh  linesOfJs.sh  openBrain.cabal  todo  ubuntuServerLts.packages
Backend/: Load.hs  RamBackend.hs
Carbon/: Backend.hs  Common.hs  Config.hs  Data.hs  Main.hs  Website.hs
Carbon/Backend/: DSL.hs  Item.hs  Logic.hs  PostgreSQL.hs  User.hs
Carbon/Backend/PostgreSQL/: AcceptanceCondition.hs  Article.hs  Common.hs  Conversion.hs  Description.hs  Discussion.hs  Item.hs  Paging.hs  Relation.hs  ResultSet.hs  User.hs
Carbon/Config/: Composition.hs
Carbon/Data/: AcceptanceCondition.hs  Alias.hs  Article.hs  Common.hs  Description.hs  Discussion.hs  Hash.hs  Id.hs  Item.hs  Json.hs  Logic.hs  Paging.hs  Relation.hs  Result.hs  ResultSet.hs  Salt.hs  TestDiscussionJSON.hs  TestResultSetDelta.hs  TestSanity.hs  User.hs
Carbon/Data/Discussion/: Strings.hs
Carbon/Data/Logic/: Diamond.hs  Evaluation.hs  Exp.hs  Instance.hs  NameContainer.hs  Parse.hs  ParseDiamond.hs  ParseExp.hs  ParseInstance.hs  Renameable.hs
Carbon/Main/: CompileTime.hs  Reflection.hs
Carbon/Website/: Common.hs  Composition.hs  Crud.hs  Files.hs  Item.hs  Login.hs  Monad.hs  Paging.hs  Routes.hs  Session.hs  User.hs
Carbon/Website/old/: Article.hs  Collection.hs  CollectionArticle.hs  Description.hs  Discussion.hs  Relation.hs  Result.hs
OpenBrain/: Backend.hs  Common.hs  Config.hs  Data.hs  Deadline.hs  Main.hs  TestAll.hs  Website.hs
OpenBrain/Argumentation/: AttackOnly.hs  Compute.hs  Definitions.hs  OBB.hs  Semantics.hs
OpenBrain/Backend/: DSL.hs  Load.hs  Logic.hs  Monad.hs  MysqlBackend.hs  Plus.hs  PostgreSQL.hs  PostgreSQLBackend.hs  RamBackend.hs  SqliteBackend.hs  Types.hs
OpenBrain/Backend/MysqlBackend/: Common.hs  Convertibles.hs  InformationBackend.hs  KarmaBackend.hs  ProfileBackend.hs  RelationBackend.hs  SaltShaker.hs  Schema.mwb  Schema.sql  SessionManagement.hs  UserBackend.hs
OpenBrain/Backend/PostgreSQL/: Article.hs  Collection.hs  CollectionArticle.hs  Common.hs  Conversion.hs  Description.hs  Discussion.hs  Paging.hs  Relation.hs  Result.hs  User.hs
OpenBrain/Backend/PostgreSQLBackend/: Common.hs  Convertibles.hs  KarmaBackend.hs  (+7 more)
OpenBrain/Config/: Karma.hs  Website.hs
OpenBrain/Data/: Alias.hs  Article.hs  Backend.hs  Collection.hs  CollectionArticle.hs  Described.hs  Description.hs  Discussion.hs  Graph.hs  Hash.hs  Id.hs  Information.hs  Json.hs  Karma.hs  Logic.hs  Misc.hs  Profile.hs  Relation.hs  Result.hs  Salt.hs  TestHash.hs  TestKarma.hs  TimeFrame.hs  User.hs
OpenBrain/Main/: CompileTime.hs  Reflection.hs
OpenBrain/User/: Data.hs  Hash.hs  Karma.hs  Profile.hs  TestHash.hs  TestKarma.hs
OpenBrain/Website/: Action.hs  Article.hs  Basic.hs  Collection.hs  CollectionArticle.hs  Common.hs  Crud.hs  Description.hs  Discussion.hs  Files.hs  Images.hs  Index.hs  Login.hs  Main.hs  Monad.hs  Parameters.hs  Profile.hs  Relation.hs  Result.hs  Routes.hs  Session.hs  Template.hs  User.hs  Users.hs
User/: Data.hs  Hash.hs  Karma.hs  TestHash.hs  TestKarma.hs
Website/: Basic.hs  Files.hs  Main.hs
diamond/: requirements
diamond/downloads/: diamond.tar.bz2  instances.tar.bz2
files/: index.html
files/css/: editor.css  form.css  information.css  main.css  menu.css  style.css
files/html/: ArticleConditionModal.html  ArticleView.html  CreateArticleView.html  CreateDiscussionView.html  DiscussionView.html  LoginRegisterForm.html  RelationCreationModal.html  ResultView.html  SingleArticleView.html  SingleDiscussionView.html  SingleDiscussionViewArticles.html  SingleDiscussionViewCollected.html  SingleDiscussionViewFiles.html  SingleDiscussionViewGraph.html  SingleDiscussionViewParticipants.html  SingleDiscussionViewResults.html  SingleDiscussionViewTabs.html  SingleResultView.html  SingleResultViewGraph.html  SingleResultViewTabs.html  SingleResultViewVote.html  SingleResultViewVoters.html  SingleUserView.html  UserView.html  head.html  index.html  menu.html  scripts.html
files/img/: ghw-arrow-right.xcf  ghw-cog.xcf  ghw-minus.xcf  ghw-plus.xcf  ghw-trash.xcf
files/js/: App.js  Datepicker.js  Edit.js  Information.js  InformationCollection.js  Main.js  Marked.js  Router.js  User.js  jquery.crud.js  log.js  main.js  router.js  sources.txt  springy.raphael.js  springy.vector.js
files/tmpl/: Datepicker.html  Head.html  InformationCollection.html  InformationContent.html  InformationDescription.html  InformationFootnotes.html  InformationItems.html  InformationList.html  InformationPreview.html  InformationSingleView.html  InformationTitle.html  LoginBox.html  LogoutBox.html  MarkdownEditor.html  Menu.html  Page.html  Pages.html  RelationDescription.html  RelationEditor.html  RelationList.html  Relations.html  TableColumns.html  UserDescription.html  UserEdit.html  UserList.html
postgresql/: database.dbm  database.sql  dropTables.sql
res/Tango/: note.txt
(+194 files in other folders)
