Name:           openBrain
Version:        0.1
Synopsis:       A bachelorproject
Description:    Interactive argumentationframeworks in a webapplication.
License:        GPL
License-file:   LICENSE
Author:         Jakob Runge
Maintainer:     Jakob Runge <mam09crm@studserv.uni-leipzig.de>
Build-Type:     Simple
Build-Depends:  aeson
              , base
              , blaze-html
              , blaze-markup
              , bytestring
              , containers
              , convertible
              , happstack-server, happstack-server-tls
              , HDBC, HDBC-postgresql
              , mtl
              , old-time
              , random
              , regex-compat
              , SHA2
              , stm
              , text
              , transformers
              , utf8-string
Executable:     openBrain
Main-is:        OpenBrain/Main.hs
