Name:           openBrain
Version:        0.9
Synopsis:       A bachelorproject
Description:    Interactive argumentationframeworks in a webapplication.
License:        GPL
License-file:   LICENSE
Author:         Jakob Runge
Maintainer:     Jakob Runge <mam09crm@studserv.uni-leipzig.de>
Build-Type:     Simple
Build-Depends:  aeson
              , array
              , base
              , bytestring
              , containers
              , convertible
              , happstack-server
              , HDBC, HDBC-postgresql
              , mtl
              , old-time
              , parsec
              , process
              , random
              , regex-compat
              , SHA2
              , stm
              , syb
              , template-haskell
              , text
              , transformers
              , unordered-containers
              , utf8-string
Executable:     openBrain
Main-is:        OpenBrain/Main.hs
